--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <tr>
       <td>Synthetic</td>
       <td><audio controls src="audio_samples/synthetic_1.flac"></audio></td>
-      <td><audio controls src="audio_samples/com2s_2.wav"></audio></td>
+      <td><audio controls src="audio_samples/baseline_2.wav"></audio></td>
       <td><audio controls src="audio_samples/com2s_2.wav"></audio></td>
       <td class="transcript">
         Because we hadn't ever suspected <span class="highlight-g">things</span> were going wrong
